# AV_Training_Batch2

./: CMakeLists.txt  Edutech India
day2/: qcar.txt
day3/: ubuntu_task
day4/: Edutech_bag_link  publisher.py
day5/: map.txt
